[gd_scene format=3 uid="uid://tdnaod8tqcwu"]

[ext_resource type="Script" uid="uid://chdll73md08bm" path="res://scenes/player/player.gd" id="1_3vyb7"]
[ext_resource type="Texture2D" uid="uid://bmcibsxo4p568" path="res://assets/512x512 textures (36).png" id="2_dqkch"]
[ext_resource type="Texture2D" uid="uid://g6oecvsdemq" path="res://assets/Scud/MainShip.png" id="2_g2els"]
[ext_resource type="Script" uid="uid://b1j81pmf4u2sp" path="res://scenes/debug_commands.gd" id="4_dqkch"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dqkch"]

[node name="Player" type="Node2D" unique_id=592517191 groups=["player"]]
script = ExtResource("1_3vyb7")

[node name="FogLight" type="PointLight2D" parent="." unique_id=1492517084]
light_mask = 16
visibility_layer = 16
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.6392157)
shadow_item_cull_mask = 16
texture = ExtResource("2_dqkch")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1531603503]
texture_filter = 1
texture_repeat = 1
rotation = 1.5707964
texture = ExtResource("2_g2els")
centered = false
offset = Vector2(-15.429833, -16.234652)

[node name="ScanRange" type="Area2D" parent="." unique_id=245210188]
collision_layer = 64
collision_mask = 16
input_pickable = false

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="ScanRange" unique_id=818443360]
position = Vector2(64, 0)
scale = Vector2(4, 4)
polygon = PackedVector2Array(-4, -28, 4, 0, -4, 28, 0, 28, 20, 0, 0, -28)

[node name="PassiveFogReveal" type="Area2D" parent="." unique_id=1345862567]
collision_layer = 32
collision_mask = 16
input_pickable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PassiveFogReveal" unique_id=675141629]
polygon = PackedVector2Array(-48, 0, -32, -32, 0, -48, 32, -32, 48, 0, 32, 32, 0, 48, -32, 32)

[node name="debug_commands" type="Node" parent="." unique_id=816004501]
script = ExtResource("4_dqkch")

[node name="Ship" type="Area2D" parent="." unique_id=934970168]
collision_layer = 2
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ship" unique_id=1946267791]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_dqkch")

[connection signal="area_entered" from="PassiveFogReveal" to="." method="_on_passive_fog_reveal_area_entered"]
